--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "antd": "^3.19.2",
     "axios": "^0.19.0",
+    "basketball-reference": "^1.0.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "nba": "^4.13.0",
     "node-sass": "^4.13.0",
     "pg": "^7.11.0",
     "react": "^16.8.6",
