--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
     "antd": "^4.3.4",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
